force-app/main/default/objects/ClosingCare_Visit__c/ClosingCare_Visit__c.object-meta.xml
<CustomObject>
    <label>ClosingCare Visit</label>
    <nameField>
        <displayFormat>CCV-{0000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClosingCare Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>