force-app/main/default/objects/ClosingCare_Visit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ClosingCare Visits</relationshipLabel>
    <relationshipName>ClosingCare_Visits_Case</relationshipName>
    <type>Lookup</type>
</CustomField>