force-app/main/default/objects/ClosingCare_Visit__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ClosingCare Visits</relationshipLabel>
    <relationshipName>ClosingCare_Visits_Community</relationshipName>
    <type>Lookup</type>
</CustomField>