force-app/main/default/objects/ClosingCare_Visit__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ClosingCare Visits</relationshipLabel>
    <relationshipName>ClosingCare_Visits_FM</relationshipName>
    <type>Lookup</type>
</CustomField>