force-app/main/default/objects/ClosingCare_Visit__c/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ClosingCare Visits (FM)</relationshipLabel>
    <relationshipName>CC_Visit_FM_Users</relationshipName>
    <type>Lookup</type>
</CustomField>