force-app/main/default/objects/ClosingCare_Visit__c/fields/Irrigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Status__c</fullName>
    <label>Irrigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Tested</fullName>
            </value>
            <value>
                <fullName>Issue Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>