force-app/main/default/objects/ClosingCare_Visit__c/fields/Issue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Issue_Flag__c</fullName>
    <label>Issue Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Create Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>