force-app/main/default/objects/ClosingCare_Visit__c/fields/Landscape_Condition__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Condition__c</fullName>
    <label>Landscape Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>