force-app/main/default/objects/ClosingCare_Visit__c/fields/Plant_Health__c.field-meta.xml
<CustomField>
    <fullName>Plant_Health__c</fullName>
    <label>Plant Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>