force-app/main/default/objects/ClosingCare_Visit__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>ClosingCare Visits</relationshipLabel>
    <relationshipName>ClosingCare_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>